--- a/html_advanced/contact.html
+++ b/html_advanced/contact.html
@@ -1,42 +1,40 @@
 <!DOCTYPE html>
-<html lang = "en" dir="rtl">
+<html lang="en" dir="ltr">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
         <title>Contact - Techium</title>
-        <meta name="description" content="This is the homepage of Techium.">
-        <link rel="icon" href="./favicon.ico" type="image/x-icon">
-        <link rel="icon" href="./favicon.png" type="image/png">
+        <meta name="description" content="Techium is a digital agency">
+        <link rel="icon" type="image/x-icon" href="./favicon.ico">
+        <link rel="icon" type="image/png" href="./favicon.png">
     </head>
     <body>
-        <!--Header-->
+        <br>
+        <!-- Header -->
         <header>
             <div>
-                <a href="/">
-                    <span>Techium</span>
-                </a>
+                <div><a href="/"><span>Techium</span></a></div>
                 <nav></nav>
             </div>
         </header>
-        <!--Main-->
+        <br>
+        <!-- Main -->
         <main>
-            <h1>
-                Homepage
-            </h1>
-            <!--Hero section-->
+            <h1>Homepage</h1>
+            <br>
+            <!-- Hero section -->
             <section>
                 <div>
-                    <h2>
-                        We help you build your brand!
-                    </h2>
+                    <h2>We help you build your brand!</h2>
                 </div>
             </section>
-            <!--Services section-->
+            <br>
+            <!-- Services section -->
             <section>
                 <div>
                     <header>
                         <h2>Services</h2>
-                        <p>work with you</p>
+                        <p>We work with you</p>
                     </header>
                     <div>
                         <h3>Design & Concept</h3>
@@ -48,7 +46,8 @@
                     </div>
                 </div>
             </section>
-            <!--Works section-->
+            <br>
+            <!-- Works section -->
             <section>
                 <div>
                     <header>
@@ -68,7 +67,8 @@
                     </div>
                 </div>
             </section>
-            <!--About Us section-->
+            <br>
+            <!-- About Us section -->
             <section>
                 <div>
                     <header>
@@ -77,21 +77,16 @@
                     </header>
                     <div>
                         <h3>Who are we</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!
-                        </p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
                         <h3>Our culture</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!
-                        </p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
                         <h3>How we work</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!
-                        </p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
                     </div>
                 </div>
             </section>
-            <!--Latest news section-->
+            <br>
+            <!-- Latest news section -->
             <section>
                 <div>
                     <header>
@@ -100,78 +95,57 @@
                     <div>
                         <article>
                             <p>Career</p>
-                            <h3>
-                                Hoc loco tenere se Triarius non potuit
-                            </h3>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!
-                            </p>
+                            <h3>Hoc loco tenere se Triarius non potuit.</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
                         </article>
                         <article>
                             <p>Digital Life</p>
-                            <h3>
-                                Ut alios omittam, hunc appello, quem ille unum secutus
-                            </h3>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!
-                            </p>
+                            <h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama?</p>
                         </article>
                         <article>
                             <p>Social</p>
-                        <h3>
-                                Bestiarum vero nullum iudicium puto
-                        </h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.
-                        </p>
+                            <h3>Bestiarum vero nullum iudicium puto.</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
                         </article>
                     </div>
                 </div>
             </section>
-            <!--Testimonials section-->
+            <br>
+            <!-- Testimonials section -->
             <section>
                 <div>
                     <header>
-                        <h2>
-                            Testimonials
-                        </h2>
+                        <h2>Testimonials</h2>
                         <p>We are more than a digital company</p>
                     </header>
                     <div>
-                        <article>
-                            Testimonial 1
-                        </article>
-                        <article>
-                            Testimonial 2
-                        </article>
-                        <article>
-                            Testimonial 3
-                        </article>
+                        <article>Testimonial 1</article>
+                        <article>Testimonial 2</article>
+                        <article>Testimonial 3</article>
                     </div>
                 </div>
             </section>
-            <!--Contact section-->
+            <br>
+            <!-- Contact section -->
             <section>
                 <div>
                     <header>
-                        <h2>
-                            Contact
-                        </h2>
+                        <h2>Contact</h2>
                         <p>We like to know new people</p>
                     </header>
                     <div>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane? 
-                        </p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
                     </div>
                 </div>
             </section>
         </main>
-        <!--Footer-->
-            <footer>
-                <div>
-                    Footer
-                </div>
-            </footer>
+        <br>
+        <!-- Footer -->
+        <footer>
+            <div>
+                Footer
+            </div>
+        </footer>
     </body>
 </html>
