--- a/html_advanced/18-index.html
+++ b/html_advanced/18-index.html
@@ -5,28 +5,30 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
         <title>Homepage - Techium</title>
         <meta name="description" content="Techium is a digital agency">
-        <link rel="icon" href="./favicon.ico" type="image/x-icon">
-        <link rel="icon" href="./favicon.png" type="image/png">
+        <link rel="icon" type="image/x-icon" href="./favicon.ico">
+        <link rel="icon" type="image/png" href="./favicon.png">
     </head>
     <body>
+        <br>
         <!-- Header -->
         <header>
             <div>
-                <a href="/">
-                    <span>Techium</span>
-                </a>
+                <div><a href="/"><span>Techium</span></a></div>
                 <nav></nav>
             </div>
         </header>
+        <br>
         <!-- Main -->
         <main>
             <h1>Homepage</h1>
+            <br>
             <!-- Hero section -->
             <section>
                 <div>
                     <h2>We help you build your brand!</h2>
                 </div>
             </section>
+            <br>
             <!-- Services section -->
             <section>
                 <div>
@@ -44,6 +46,7 @@
                     </div>
                 </div>
             </section>
+            <br>
             <!-- Works section -->
             <section>
                 <div>
@@ -64,6 +67,7 @@
                     </div>
                 </div>
             </section>
+            <br>
             <!-- About Us section -->
             <section>
                 <div>
@@ -81,6 +85,7 @@
                     </div>
                 </div>
             </section>
+            <br>
             <!-- Latest news section -->
             <section>
                 <div>
@@ -106,6 +111,7 @@
                     </div>
                 </div>
             </section>
+            <br>
             <!-- Testimonials section -->
             <section>
                 <div>
@@ -120,6 +126,7 @@
                     </div>
                 </div>
             </section>
+            <br>
             <!-- Contact section -->
             <section>
                 <div>
@@ -133,9 +140,12 @@
                 </div>
             </section>
         </main>
+        <br>
         <!-- Footer -->
         <footer>
-            <div>Footer</div>
+            <div>
+                Footer
+            </div>
         </footer>
     </body>
 </html>
